# drift-fixer

./: .gitignore  DEVELOPMENT.md  README.md  action.yml  main.py  pyproject.toml  test.sh
.github/workflows/: release.yml
drift_fixer/: __init__.py  config_editor.py  file_analyzer.py  git_manager.py  main.py  plan_parser.py  terraform_runner.py
examples/: drift-fixer.toml  example-usage-app-commit.yml  example-usage.yml  example_usage.py  main.tf
go/: go.mod  go.sum
go/cmd/drift-fixer/: main.go
go/internal/editor/: editor.go  editor_extended_test.go  editor_test.go  hook.go
go/internal/finder/: finder.go
go/internal/planner/: planner.go  planner_test.go
tests/: test_drift_fixer.py
