[project]
name = "drift-fixer"
version = "0.1.0"
description = "A Python utility to automatically detect and fix configuration drift in Terraform repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tfparse>=0.6.0",
    "click>=8.0.0",
]

[project.scripts]
drift-fixer = "drift_fixer.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
